<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Neural Network Simulator</string>
    <string name="action_settings">Settings</string>
    <string name="editor_preferences_key">com.EthanHeming.NeuralNetworkSimulator.EDITOR_PREFERENCES_KEY</string>
    <string name="neuron_help_file">Neural network nodes, or \'neurons\', are simulated brain cells. Neurons can be created by tapping anywhere on the screen. Tapping on a neuron in place will make it activate, also known as \'firing\'.</string>
    <string name="neurontypes_help_file">Neurons can also sense the world through sensory organs like your eyes, and affect the world by activating muscles. Your device also has some of these capabilities. Click and hold on a neuron to select different sensory and motor neuron types.</string>
    <string name="axon_help_file">Axons are the parts of a neuron that conduct information to another neuron. You can create an axon by clicking and dragging from one neuron to another. When a neuron fires, a burst of activity or \'spike\' is sent out along all outgoing axons to other neurons.</string>
    <string name="modify_axon_help_file">Click and hold on an axon to change its properties. Sliding up will make the axon\'s spikes excitatory (making neurons more likely to fire), and down will make them inhibitory (making neurons less likely to fire). Sliding right will increase the axon\'s thickness, making messages travel faster, and left will make them slower.</string>
    <string name="delete_help_file">Drawing a line through things, starting in empty space, will delete them. This is also known as \'lesioning\'.</string>
    <string name="electrode_help_file">You can drag electrodes out from the icon in the top left corner. These electrodes will show the excitation level, or voltage, of neurons near their tips. Graphs of these voltages will appear at the top of the screen. These graphs can be hidden or resized by tapping or swiping vertically. Drag electrodes back to the corner to remove them.</string>
    <string name="control_help_file">You can two-finger scroll around the workspace and pinch to zoom. This will allow you to create larger networks. Happy building!</string>
    <string name="bar_slow_name">40x slower</string>
    <string name="bar_fast_name">real time</string>
    <string name="bar_name">Simulation Speed</string>

</resources>