<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#000000">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Neural Network Help File"
        android:gravity="center"
        android:textSize="25sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:drawableLeft="@drawable/ic_neuron_help"
                android:text="@string/neuron_help_file"
                android:textSize="18sp" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:drawableLeft="@drawable/ic_neurontypes_help"
                android:text="@string/neurontypes_help_file"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:drawableLeft="@drawable/ic_axon_help"
                android:text="@string/axon_help_file"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:drawableLeft="@drawable/ic_edit_axon_help"
                android:text="@string/modify_axon_help_file"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:drawableLeft="@drawable/ic_delete_help"
                android:text="@string/delete_help_file"
                android:textSize="18sp" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:drawableLeft="@drawable/ic_electrode_help"
                android:text="@string/electrode_help_file"
                android:textSize="18sp" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:drawableLeft="@drawable/ic_control_help"
                android:text="@string/control_help_file"
                android:textSize="18sp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>